style.css
/* ... */
.hero-experience-background-overlay{
    background-color: rgba(248, 86, 11, 0.733);
    transition: 8s ease all;
    opacity: 0;
    animation: fire;
    animation-iteration-count: infinite;
    animation-duration: 10s;
}
#hero-question-1-choices, #hero-question-2-choices, #hero-question-3-choics{
    display: flex;
    height: 100%;
    opacity: 1;
}

#hero-question-3-div{
    height: 58em;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}


@keyframes fire{
    0%{
        opacity: .4;
        background-color: rgb(248, 86, 11)
    }

    50%{
        opacity: .533;
        background-color: rgb(214, 32, 0)
    }
    65%{
        opacity: .533;
        background-color: rgb(255, 115, 0);
    }
    100%{
        opacity: .4;
        background-color: rgb(248, 86, 11)  }
}

.hero-title, .hero-background-info, .hero-instructions{
    color: white;
    font-size: 35px;
    font-weight: bold;
    text-align: center;
    opacity: 1;
    transition: 400ms;
}

.hero-title-page-container{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    opacity: 1;
    height: 50em;
}

#hero-1-title-holder, #hero-2-title-holder, #hero-3-title-holder{
    opacity: 1;
}

#secret-submit{
    background-color: rgb(255, 255, 255);
    color: orangered;
    margin-top: 30px;
}

#hero-submit-button-container{
    height: 300px;
}



@media only screen and (max-width: 640px){

    #main-title{
        font-size: 45px;
        height: 200px;
        white-space: pre-wrap;
    }
    #main-subtitle{
        font-size: 45px;
    }
    #main-title-holder{
        height: 45em;
    }
    .question-div{
        height: 100%;
    }
    .choice{
        flex: 1 0 40%;
        width: 140px;
        height: 158px;
    }
#question-6-choice-1-cover, #question-6-choice-2-cover, #question-6-choice-3-cover, #question-6-choice-4-cover,
#question-6-choice-5-cover, #question-6-choice-6-cover, #question-1-choice-1-cover, #question-1-choice-2-cover, #question-1-choice-3-cover, #question-1-choice-4-cover,
#question-1-choice-5-cover, #question-1-choice-6-cover, #question-4-choice-1-cover, #question-4-choice-2-cover, #question-4-choice-3-cover, #question-4-choice-4-cover,
#question-4-choice-5-cover, #question-4-choice-6-cover, #question-5-choice-1-cover, #question-5-choice-2-cover, #question-5-choice-3-cover, #question-5-choice-4-cover,
#question-5-choice-5-cover, #question-5-choice-6-cover, #hero-question-1-choice-1-cover, #hero-question-1-choice-2-cover, #hero-question-1-choice-3-cover, #hero-question-2-choice-1-cover,
#hero-question-2-choice-2-cover, #hero-question-2-choice-3-cover, #hero-question-3-choice-1-cover, #hero-question-3-choice-2-cover, #hero-question-3-choice-3-cover{
        width: 165px;
        height: 125px;
        font-size: 22px;
    }

    .choice-image-cover{
        width: 167px;
        font-size: 22px;
    }

    #question-2-choice-6-cover{
        font-size: 16px;
    }

    .answer-title{
        font-size: 35px;
        margin-bottom: 25px;
    }
    .answer-description{
        font-size: 22px;
    }
    .answer-image{
        margin-bottom: 25px;
    }

}

